# blueshock

./: .gitattributes  .gitignore  CMakeLists.txt  intro_shader.fs
cmake/: FindSDL2.cmake  Findassimp.cmake  Findlua.cmake
include/: Camera.h  Display.h  FrameBuffer.h  Game.h  Input.h  InputSystem.h  Log.h  Mesh.h  MessageBus.h  Model.h  ModelLoader.h  ModelSystem.h  QuadRenderer.h  Renderer.h  Scene.h  ScriptSystem.h  Shader.h  ShaderProgram.h  Texture.h  util.h
include/engine/io/: ModelLoader.h  TextureLoader.h
include/engine/render/: Mesh.h  Model.h  ShaderProgram.h  Texture.h
res/: game.json
res/model/: blah.dae
res/shader/: frag_shader.txt  quad_frag.txt  quad_vert.txt  vert_shader.txt
src/: Display.cpp  GenericShaderProgram.cpp  GenericShaderProgram.h  Input.cpp  Input.h  Log.cpp  Log.h  Shader.cpp  Shader.h  main.cpp  util.cpp  util.h
src/engine/: Input.cpp  Log.cpp  util.cpp
src/engine/io/: ModelLoader.cpp  TextureLoader.cpp
src/engine/render/: Camera.cpp  Display.cpp  FrameBuffer.cpp  Mesh.cpp  Model.cpp  QuadRenderer.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp
src/engine/scene/: MessageBus.cpp  Scene.cpp
src/engine/scene/system/: InputSystem.cpp  ModelSystem.cpp  ScriptSystem.cpp
src/game/: main.cpp
src/render/: Camera.cpp  Camera.h  Display.cpp  Display.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
